# Ai-test

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
config/: Caddyfile  jarvis.service  litestream.yml  logrotate.conf
notebooks/: colab_setup.ipynb
scripts/: jarvis  setup.sh  start_dev.sh
src/jarvis/: __init__.py  config.py
src/jarvis/agents/: base.py  orchestrator.py
src/jarvis/api/: main.py  telegram_bot.py
src/jarvis/api/static/: index.html  manifest.json  sw.js
src/jarvis/daemon/: kairos.py
src/jarvis/llm/: client.py  router.py
src/jarvis/memory/: database.py  embeddings.py  store.py
src/jarvis/observability/: logger.py  metrics.py
src/jarvis/security/: rollback.py  sandbox.py  zones.py
src/jarvis/tools/: registry.py
src/jarvis/voice/: pipeline.py  stt.py  tts.py  vad.py
tests/: test_security.py
